--- a/src/docs/tworld.6
+++ b/src/docs/tworld.6
@@ -47,7 +47,7 @@ stepping upon them. The key disappears from the map and appears in
 your possession. Keys in your possession are displayed on the
 right-hand side of the window.
 .P
-Besides keys and chip, there are also four kinds of special footgear
+Besides keys and chips, there are also four kinds of special footgear
 that Chip can collect. Like keys, boots can be picked up simply by
 walking over them. (There is no limit to the number of boots you can
 have.) These boots permit Chip to walk across four different kinds of
@@ -245,6 +245,9 @@ toggles between even-step and odd-step offset.
 .TP
 .B Shift-O
 (Lynx-mode only) increments the stepping offset by one.
+.TP
+.B F
+(Lynx-mode only) rotates the initial "random" force floor direction.
 .TP
 .B Ctrl-X
 deprecates the best solution for that level. If the level is then
@@ -745,7 +748,7 @@ the resource, level set, and data file directories.
 Specifies a directory for saving solution files.
 .br
 .SH LICENSE
-Tile World is copyright (C) 2001-2006 by Brian Raiter.
+Tile World is copyright (C) 2001-2015 by Brian Raiter.
 .P
 This program is free software; you can redistribute it and/or  
 modify it under the terms of the GNU General Public License as 
@@ -775,9 +778,8 @@ made available for the Lynx.
 MS-DOS, Microsoft Windows (16-bit), Amiga, ZX Spectrum, Atari ST, and
 the Commodore 64. (A NES port was also planned, but never completed.)
 .P
-The Windows port was different from most (perhaps all?) of the others
-in that it was not done by the original team at Epyx. Instead it was
-done by Microsoft and sold as part of Windows Entertainment Pack 4
+The Windows port was not done by the original team at Epyx. Instead it
+was done by Microsoft and sold as part of Windows Entertainment Pack 4
 (and later as part of Best of Windows Entertainment Pack). In the
 process of recreating the game for the 16-bit Windows platform,
 Microsoft introduced a surprising number of changes to the mechanics
@@ -790,28 +792,33 @@ community of adherents to the game connected via a MSN chatroom (and
 later through the internet). A few members of this community managed
 to decipher the format of the MS game's data file, and John K. Elion
 subsequently created a freeware level editor, called ChipEdit. As a
-result there are now dozens of new level sets, created by fans of the
-game and all freely available.
+result there are now hundreds of new level sets, created by fans of
+the game and all freely available.
 .P
 Atari discontinued support for the Lynx in 1994. When Epyx went under,
 the rights to their games were purchased by Bridgestone Multimedia.
 Responding to the success of "Chip's Challenge", Chuck Sommerville
-created a sequel ("Chip's Challenge 2"). The sequel included the
+created a sequel, called "Chip's Challenge 2". The sequel included the
 original game as a proper subset, and the company held the rights to
-both games. Bridgestone Multimedia, who has now become Alpha Omega
-Publications, unfortunately did not see fit to actually release
-"Chip's Challenge 2", and by now it is highly unlikely that it ever
-will be released. Since Chuck Sommerville no longer has rights to
-either game, and Microsoft no longer sells either of the Entertainment
-Packs, the original "Chip's Challenge" is no longer available except
-by purchasing a used copy of one of the aforementioned Entertainment
-Packs (or by downloading an illegal copy).
+both games. Bridgestone Multimedia was not interested in publishing
+the game, however, and so made no effort to release it.
+.P
+Microsoft no longer sells any of the Entertainment Packs, so the older
+Windows version of "Chip's Challenge" is no longer (legally) available
+to newcomers except by finding used copies for sale.
 .P
 In 2001, the author began writing "Tile World" with the intention of
 recreating a version of the MS game for the Linux platform. At the
 encouragement of Chuck Sommerville, this project was expanded to
 include the goals of recreating the original Lynx game as well, and
 also making the program work under MS Windows in addition to Linux.
+Version 1.0 was released in 2002. Version 1.3 was released in 2006.
+.P
+In 2015 Chuck Sommerville finally managed to strike a deal with
+Bridgestone Multimedia and get Chips Challenge 2 published on Steam.
+Since this release also includes the original levels, with the name
+officially being "Chip's Challenge 1", there is now yet another
+variation of the original ruleset.
 .br
 .SH APPENDIX: NOTES ON NOMENCLATURE
 "Chip's Challenge" has seen several incarnations. Each had its own
@@ -821,7 +828,8 @@ the MS version of the game were known as fire boots, flippers (for
 water), skates (for ice), and suction boots (for force floors). In the
 original Lynx version, however, they were not even boots -- the four
 tools were fire shields, water shields, cleats, and magnets,
-respectively.
+respectively. With the CC2 release, the objects have returned to being
+boots, but the suction boots are now called magno boots.
 .P
 Several of the creatures have seen a variety of names. The list of
 creatures given in
